--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,82 @@
     <artifactId>rest-sample</artifactId>
     <version>0.1-SNAPSHOT</version>
 
-    
+    <properties>
+        <spring.version>3.0.5.RELEASE</spring.version>
+        <jetty.version>6.1.10</jetty.version>
+    </properties>
+
+    <dependencies>
+        <!-- Spring 3 dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>maven-jetty-plugin</artifactId>
+                <version>${jetty.version}</version>
+                <configuration>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <stopKey>foo</stopKey>
+                    <stopPort>9999</stopPort>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>start-jetty</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <scanIntervalSeconds>5</scanIntervalSeconds>
+                            <daemon>true</daemon>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop-jetty</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
+    <!--
+    This element contains a list of pluginGroup elements, each contains a groupId. The list is searched when a plugin is
+    used and the groupId is not provided in the command line. This list automatically contains org.apache.maven.plugins
+    and org.codehaus.mojo.
+
+    <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0
+                          http://maven.apache.org/xsd/settings-1.0.0.xsd">
+        ...
+        <pluginGroups>
+            <pluginGroup>org.mortbay.jetty</pluginGroup>
+        </pluginGroups>
+        ...
+    </settings>
+
+    On Mac system, settings.xml is put at /Users/{username}/.m2/settings.xml & /usr/share/maven/conf/settings.xml
+    -->
+
 </project>
