[ymeng] change context root of jetty

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
                     <scanIntervalSeconds>10</scanIntervalSeconds>
                     <stopKey>foo</stopKey>
                     <stopPort>9999</stopPort>
+                    <contextPath>rest</contextPath>
                 </configuration>
                 <executions>
                     <execution>
